tests/stable/misc/compile_fail/forward_non_path_fn.stderr
error: unable to determine at compile time which function is being called

  = help: use a direct path to the function instead

  --> $DIR/forward_non_path_fn.rs:10:5
   |
10 |     array[0]();
   |     ^^^^^^^^
